# PyLinkam

./: README.md  requirements.txt  setup.cfg  setup.py
PyLinkam/: PyLinkam.py  Pyqt_App.py  Pyqt_Widget.py  __init__.py
example/: Example.ipynb  datalog.csv  test.csv
